<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".firebase.RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/id_select_images"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_img"
        app:civ_border_width="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/id_select_button"
        app:layout_constraintEnd_toEndOf="@id/id_select_button"
        app:layout_constraintStart_toStartOf="@id/id_select_button"
        app:layout_constraintTop_toTopOf="@id/id_select_button"
        tools:ignore="ImageContrastCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_campo_register"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_select_images">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_campo_register"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_layout_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_campo_register"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_layout_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_layout_confirm_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_campo_register"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_layout_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registro_password_confirm"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/id_btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_layout_confirm_password"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/id_select_button"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_button"
        android:text="@string/registro_images_url"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>